images completed - preparing to deploy
